<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_9">

    <LinearLayout
        android:layout_weight="3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lt_tv_id"
        android:text="@string/list_item_id"
        android:textSize="@dimen/text_size_28"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lt_tv_name"
        android:text="@string/list_item_name"
        android:textSize="@dimen/text_size_28"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lt_tv_surname"
        android:text="@string/list_item_surname"
        android:textSize="@dimen/text_size_28"/>

</LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lt_tv_gender"
        android:text="@string/list_item_gender"
        android:textSize="@dimen/text_size_28"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lt_tv_age"
        android:text="@string/list_item_age"
        android:textSize="@dimen/text_size_28"/>
    </LinearLayout>

</LinearLayout>